--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
   "dependencies": {
     "@enigmatis/polaris-core": "^2.0.0-beta.9",
     "express": "^4.17.1",
+    "graphql": "^14.6.0",
+    "graphql-relay": "^0.6.0",
     "pg": "^7.18.2"
   },
   "devDependencies": {
+    "@types/graphql-relay": "^0.4.11",
     "@types/node": "^13.9.2",
     "ts-node": "^8.8.1",
     "typescript": "^3.8.3"
