--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
   },
   "homepage": "https://github.com/Enigmatis/polaris-example#readme",
   "dependencies": {
-    "@enigmatis/polaris-core": "^2.0.0-beta.10",
+    "@enigmatis/polaris-core": "2.0.0-beta.23",
     "@types/graphql-depth-limit": "^1.1.2",
     "express": "^4.17.1",
     "graphql-depth-limit": "^1.1.0",
     "pg": "^7.18.2"
   },
   "devDependencies": {
-    "@types/node": "^13.11.1",
-    "ts-node": "^8.8.2",
-    "typescript": "^3.8.3"
+    "@types/node": "^13.13.14",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.6"
   }
 }
