--- a/package.json
+++ b/package.json
@@ -19,15 +19,16 @@
   },
   "homepage": "https://github.com/Enigmatis/polaris-example#readme",
   "dependencies": {
-    "@enigmatis/polaris-core": "2.0.0-beta.23",
+    "@enigmatis/polaris-core": "2.0.0-beta.34",
     "@types/graphql-depth-limit": "^1.1.2",
+    "dataloader": "^2.0.0",
     "express": "^4.17.1",
     "graphql-depth-limit": "^1.1.0",
     "pg": "^7.18.2"
   },
   "devDependencies": {
-    "@types/node": "^13.13.14",
+    "@types/node": "^13.13.15",
     "ts-node": "^8.10.2",
-    "typescript": "^3.9.6"
+    "typescript": "^3.9.7"
   }
 }
